--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.477.0",
-    "next": "15.2.1-canary.5",
+    "next": "^15.2.1-canary.5",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
